# Compliance-Aware-Agent-Orchestrator

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  check_real_metrics.py  docker-compose.yml  pyproject.toml  requirements.txt  run_demo.sh  run_eval.py  run_langgraph.py  run_real_data.py  test_preprocessing.py  test_rag_accuracy.py
data/: audit.db-shm  audit.db-wal  download_attack.sh  download_cicids.sh
data/scenarios/: adversarial.yaml
models/: .gitkeep  README.md  cat_cols.json  columns_to_scale.json  export_model.py  extracted_code.py  feature_columns.json  top_ports.json
scratch/: compute_metrics.py  evaluate_rag.py
sentinel/: logging_config.py  main.py  models.py
sentinel/agents/: escalation_agent.py  investigation_agent.py  response_agent.py  threat_intel_agent.py
sentinel/api/: app.py
sentinel/audit/: logger.py  schema.sql
sentinel/config/: policy_cyber.yaml  settings.py
sentinel/data/: ingestion.py
sentinel/evaluation/: metrics.py  red_team.py  report.py  report_20260711_190330.md  report_20260711_190616.md  report_20260711_190723.md  report_20260711_191048.md  report_20260711_191229.md  report_20260711_200915.md  results_20260711_190330.json  results_20260711_190616.json  results_20260711_190723.json  results_20260711_191048.json  results_20260711_191229.json  (+1 more)
tests/: test_alert_replayer.py  test_audit_logger.py  test_escalation_agent.py  test_evaluation.py  test_investigation_agent.py  test_mcp_gateway.py  test_normalizer.py  test_policy_engine.py  test_response_agent.py  test_retriever.py  test_threat_intel_agent.py
(+22 files in other folders)
